--- a/vue_studentmanagement/public/index.html
+++ b/vue_studentmanagement/public/index.html
@@ -27,6 +27,8 @@
   <!-- <link rel="stylesheet" href="/admin/plugins/summernote/summernote-bs4.min.css"> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- style css -->
+  <link rel="stylesheet" href="/css/style.css">
 </head>
   <body class="hold-transition sidebar-mini layout-fixed">
     <noscript>
